# snapshots-cli

./: Dockerfile  Makefile  README.md  docker-compose.yml  gitignore  prometheus.yml  pyproject.toml
data/: snapshot_20230101.csv
snapshots/: connection_handler.py  monitoring.py  snapshots_cli.py
sql/metadata_db/: init.sql
sql/snapshots_db/: init.sql
tests/: connection_handler_spec.py  snapshots_spec.py
